Fix first h1 spacing, header font hierarchy
The font hierarchy is a little complicated between the _content.scss,
_font.scss, and Redocly theme styles, but this at least aligns the
Redocly theme variables with the MD content styling.

--- a/styles/_top-nav.scss
+++ b/styles/_top-nav.scss
@@ -586,10 +586,8 @@ article h6:before,
   visibility: hidden;
   pointer-events: none;
 }
-
-// Fix so links aren't unclickable underneath the header anchor-fix
-a {
-  z-index: 1;
+article h1:first-of-type:before {
+  margin-top: -60px; // Don't add extra space to page title
 }
 
 // Animated chevron (e.g. for language dropdown) -------------------------------
